--- a/public/css/front.css
+++ b/public/css/front.css
@@ -1991,6 +1991,8 @@ progress { display: block; margin: 10px auto; }
 .ad { position: absolute; left: 30px; top: 100px; width: 250px; padding: 7px; -moz-border-radius: 7px; -webkit-border-radius: 7px; border-radius: 7px; color: #777; font-size: 14px; border: 7px solid #e7e7e7; background-color: #fcf8e3; }
 
 @media screen and (max-width: 1366px) { .ad { display: none; } }
+@media screen and (max-width: 979px) { .navbar-fixed-top { margin-bottom: 0; } }
+@media screen and (max-width: 979px) { .nav-collapse.pull-right, .nav-collapse.collapse.pull-right { float: left; } }
 .navbar { font-size: 14px; }
 .navbar .brand { position: relative; width: 100px; }
 .navbar .brand .navbar-logo { top: 5px; left: 30px; height: 30px; position: absolute; }
